--- a/layout/package.json
+++ b/layout/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
