--- a/layout/package.json
+++ b/layout/package.json
@@ -11,18 +11,18 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "axios": "^0.21.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.8.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
-    "register-service-worker": "^1.7.1",
+    "register-service-worker": "^1.7.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-pwa": "^4.5.9",
+    "@vue/cli-plugin-router": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
     "vue-cli-plugin-fontawesome": "^0.3.1",
     "vue-template-compiler": "^2.6.11"
   }
